# mcp

./: Dockerfile  Dockerfile.ocr  README.md  mcp.json  pyproject.toml
app/: main.py
app/api/: routes.py
app/connectors/: base.py  database.py  git.py  registry.py  warehouse.py
app/core/: config.py
app/skills/: alpha_research.py  data_discovery.py
examples/: client.py
tests/: test_connectors.py  test_health.py
