[project]
name = "mcp-api"
version = "0.1.0"
description = "Minimal MCP FastAPI service with connector framework"
authors = [{name = "Kaiwen"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.3.0",
  "httpx>=0.27.0",
  "mcp>=0.1.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
